fix commodity card misaligned images

--- a/application/src/main/resources/css/compiled/sass/main.css
+++ b/application/src/main/resources/css/compiled/sass/main.css
@@ -286,6 +286,13 @@
             -fx-pref-height: 100%;
             -fx-alignment: bottom-center;
             -fx-padding: 0 0em 0.5em 0; }
+            .app .application-screen .horizons-tab-content .commodities-tab-content .horizons-commodities-overview .commodity-card .market .image {
+              -fx-min-width: 2em;
+              -fx-pref-width: 2em;
+              -fx-max-width: 2em;
+              -fx-min-height: 2em;
+              -fx-pref-height: 2em;
+              -fx-max-height: 2em; }
             .app .application-screen .horizons-tab-content .commodities-tab-content .horizons-commodities-overview .commodity-card .market .station-box {
               -fx-min-width: 12em;
               -fx-pref-width: 12em;
